covering message handlers with tests and fixing that warning from sass

--- a/src/theme/styles.css
+++ b/src/theme/styles.css
@@ -1,11 +1,5 @@
-Disable
-  animations/transitions
-  on
-  Bootstrap
-  toggles
-  (switches)
-  .form-switch
-  .form-check-input,
+/* Disable animations/transitions on Bootstrap toggles (switches) */
+.form-switch .form-check-input,
 .form-check-input {
   transition: none !important;
 }
